Changed border colour and width

--- a/src/app/features/first-login-wizard/first-login-wizard.component.scss
+++ b/src/app/features/first-login-wizard/first-login-wizard.component.scss
@@ -23,7 +23,7 @@
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
   height: 0;
-  border: solid 1px black;
+  border: solid 3px #8accd2;
 }
 .video_wrapper iframe {
   position: absolute;
