--- a/src/app/features/create-account/workplace/confirm-workplace-details/confirm-workplace-details.component.html
+++ b/src/app/features/create-account/workplace/confirm-workplace-details/confirm-workplace-details.component.html
@@ -9,11 +9,19 @@
         (setReturn)="onSetReturn()"
         data-testid="workplaceNameAddress"
       ></app-summary-list>
+
       <app-summary-list
-        [wrapBorder]="true"
+        [topBorder]="true"
         [summaryList]="mainService"
         (setReturn)="onSetReturn()"
         data-testid="mainService"
+      ></app-summary-list>
+
+      <app-summary-list
+        [wrapBorder]="true"
+        [summaryList]="totalStaff"
+        (setReturn)="onSetReturn()"
+        data-testid="totalStaff"
       ></app-summary-list>
     </div>
   </div>
