Removed training and qualifications feature flag and removed old training report folder

--- a/src/app/shared/components/training-link-panel/training-link-panel.component.html
+++ b/src/app/shared/components/training-link-panel/training-link-panel.component.html
@@ -26,7 +26,7 @@
       </span>
     </a>
   </div>
-  <ng-container *ngIf="isParent && parentTrainingAndQualificationsReport">
+  <ng-container *ngIf="isParent">
     <div class="govuk-grid-column-one-third govuk-!-padding-right-0">
       <a
         class="govuk-list govuk-list--inline govuk-list govuk__flex govuk__align-items-center"
