--- a/src/app/shared/directives/create-workplace/add-total-staff/add-total-staff.component.html
+++ b/src/app/shared/directives/create-workplace/add-total-staff/add-total-staff.component.html
@@ -6,7 +6,7 @@
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <h1 class="govuk-fieldset__heading">How many members of staff does your workplace have?</h1>
         </legend>
-        <p>
+        <p data-testid="info">
           The number should include all staff (care-providing and none care-providing, those on permanent or temporary
           contracts, pool, bank and agency workers).
         </p>
