fixed the validation to dont allow when there is an minus or big number

--- a/src/app/shared/directives/create-workplace/add-total-staff/add-total-staff.component.html
+++ b/src/app/shared/directives/create-workplace/add-total-staff/add-total-staff.component.html
@@ -27,8 +27,9 @@
             formControlName="totalStaff"
             id="totalStaff"
             name="totalStaff"
-            [class.govuk-input--error]="submitted && (form.invalid || serverError)"
+            [class.govuk-input--error]="submitted && form.get('totalStaff').invalid"
             type="text"
+            aria-describedby="totalStaff-hint"
           />
         </div>
       </fieldset>
