changed the validation messages

--- a/src/app/shared/directives/create-workplace/add-total-staff/add-total-staff.component.html
+++ b/src/app/shared/directives/create-workplace/add-total-staff/add-total-staff.component.html
@@ -12,7 +12,7 @@
           The number should include all staff (care-providing and none care-providing, those on permanent or temporary
           contracts, pool, bank and agency workers).
         </p>
-        <app-details [title]="'Not sure how many members of staff your workplace has?'">
+        <app-details [title]="appDetailTitle">
           <p>
             You can enter an estimate to save time, but remember to update this number in ASC-WDS once your account has
             been validated by Skills for Care.
