--- a/src/app/features/bulk-upload/bulk-upload-page/bulk-upload-page.component.html
+++ b/src/app/features/bulk-upload/bulk-upload-page/bulk-upload-page.component.html
@@ -28,6 +28,10 @@
   </div>
   <div class="govuk-grid-column-one-third">
     <app-bulk-upload-related-content></app-bulk-upload-related-content>
+    <!-- <app-bulk-upload-download-current-data
+      [toggleSanitise]="toggleSanitise"
+      [sanitise]="sanitise"
+    ></app-bulk-upload-download-current-data> -->
     <app-bulk-upload-download-current-data></app-bulk-upload-download-current-data>
     <app-codes-and-guidance></app-codes-and-guidance>
   </div>
