add ability to upload worker file with sanitised dob and ni number, move frontend sanitise logic into bulk upload page component

--- a/src/app/features/bulk-upload/bulk-upload-sidebar/bulk-upload-download-current-data/bulk-upload-download-current-data.component.html
+++ b/src/app/features/bulk-upload/bulk-upload-sidebar/bulk-upload-download-current-data/bulk-upload-download-current-data.component.html
@@ -1,5 +1,5 @@
 <div class="govuk-grid-row govuk-!-margin-top-6 govuk-!-margin-left-0">
-  <div class="govuk-checkboxes govuk-checkboxes--small">
+  <div *ngIf="isAdmin" class="govuk-checkboxes govuk-checkboxes--small">
     <div class="govuk-checkboxes__item">
       <input
         data-testid="showDataCheckbox"
