--- a/src/app/features/bulk-upload/bulk-upload-page/bulk-upload-page.component.html
+++ b/src/app/features/bulk-upload/bulk-upload-page/bulk-upload-page.component.html
@@ -28,11 +28,12 @@
   </div>
   <div class="govuk-grid-column-one-third">
     <app-bulk-upload-related-content></app-bulk-upload-related-content>
-    <!-- <app-bulk-upload-download-current-data
+    <app-bulk-upload-download-current-data
       [toggleSanitise]="toggleSanitise"
       [sanitise]="sanitise"
-    ></app-bulk-upload-download-current-data> -->
-    <app-bulk-upload-download-current-data></app-bulk-upload-download-current-data>
+      [isAdmin]="isAdmin"
+    ></app-bulk-upload-download-current-data>
+    <!-- <app-bulk-upload-download-current-data></app-bulk-upload-download-current-data> -->
     <app-codes-and-guidance></app-codes-and-guidance>
   </div>
 
