--- a/src/app/features/wdf/wdf-claims/wdf-grant-letter/wdf-grant-letter.component.html
+++ b/src/app/features/wdf/wdf-claims/wdf-grant-letter/wdf-grant-letter.component.html
@@ -23,31 +23,65 @@
               getErrorMessage('grantLetter')
             }}</span>
           </span>
-          <div class="govuk-radios govuk-radios--conditional">
-            <div class="govuk-radios__item">
-              <input
-                aria-controls="grantLetter-conditional-1"
-                class="govuk-radios__input"
-                id="grantLetter-1"
-                name="grantLetter"
-                type="radio"
-                value="myself"
-                [formControlName]="'grantLetter'"
-              />
-              <label class="govuk-label govuk-radios__label" for="grantLetter-1"> Myself</label>
-            </div>
-            <div class="govuk-radios__item">
-              <input
-                aria-controls="grantLetter-conditional-2"
-                class="govuk-radios__input"
-                id="grantLetter-2"
-                name="grantLetter"
-                type="radio"
-                value="somebody else"
-                [formControlName]="'grantLetter'"
-              />
-              <label class="govuk-label govuk-radios__label" for="grantLetter-2">Somebody else</label>
-            </div>
+          <div class="govuk-radios govuk-radios--conditional govuk-!-margin-bottom-8">
+            <ng-container *ngFor="let answer of options; let idx = index">
+              <div class="govuk-radios__item">
+                <input
+                  class="govuk-radios__input"
+                  [formControlName]="'grantLetter'"
+                  id="grantLetter-{{ idx }}"
+                  name="grantLetter"
+                  type="radio"
+                  [value]="answer"
+                />
+                <label class="govuk-label govuk-radios__label" for="grantLetter-{{ idx }}">
+                  {{ answer }}
+                </label>
+              </div>
+              <div
+                *ngIf="answer === 'Somebody else'"
+                class="govuk-radios__conditional"
+                [class.govuk-radios__conditional--hidden]="form.get('grantLetter').value !== 'Somebody else'"
+                id="conditional-grantLetter-conditional-1"
+              >
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="Somebodyelse"> Full name </label>
+                  <span
+                    *ngIf="submitted && form.get('Somebodyelse').invalid"
+                    id="Somebodyelse-error"
+                    class="govuk-error-message"
+                  >
+                    <span class="govuk-visually-hidden">Error:</span> {{ getFirstErrorMessage('Somebodyelse') }}
+                  </span>
+                  <input
+                    class="govuk-input govuk-input--width-20"
+                    [class.govuk-input--error]="submitted && form.get('Somebodyelse').invalid"
+                    id="Somebody else"
+                    [formControlName]="'Somebodyelse'"
+                    name="Somebodyelse"
+                    type="text"
+                  />
+                </div>
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="Somebody else"> Email address </label>
+                  <span
+                    *ngIf="submitted && form.get('Somebody else').invalid"
+                    id="Somebody else-error"
+                    class="govuk-error-message"
+                  >
+                    <span class="govuk-visually-hidden">Error:</span> {{ getFirstErrorMessage('Somebody else') }}
+                  </span>
+                  <input
+                    class="govuk-input govuk-input--width-20"
+                    [class.govuk-input--error]="submitted && form.get('Somebody else').invalid"
+                    id="Somebody else"
+                    [formControlName]="'Somebodyelse'"
+                    name="Somebodyelse"
+                    type="text"
+                  />
+                </div>
+              </div>
+            </ng-container>
           </div>
         </div>
       </fieldset>
