add and remove padding to data checkbox and download content links

--- a/src/app/features/bulk-upload/bulk-upload-sidebar/bulk-upload-download-current-data/bulk-upload-download-current-data.component.html
+++ b/src/app/features/bulk-upload/bulk-upload-sidebar/bulk-upload-download-current-data/bulk-upload-download-current-data.component.html
@@ -1,5 +1,5 @@
-<h2 class="govuk-heading-s">Download your current data</h2>
-<ul class="govuk-list govuk-list--download">
+<h2 class="govuk-heading-s govuk-!-margin-top-6">Download your current data</h2>
+<ul class="govuk-list govuk-list--download govuk-!-margin-bottom-0">
   <li>
     <a
       href="/bulk-upload/download/{{ now | date: 'yyyy-MM-dd' }}-sfc-bulk-upload-workplace.csv"
