--- a/src/app/features/bulk-upload/bulk-upload-sidebar/bulk-upload-sanitise-data-checkbox/bulk-upload-sanitise-data-checkbox.component.html
+++ b/src/app/features/bulk-upload/bulk-upload-sidebar/bulk-upload-sanitise-data-checkbox/bulk-upload-sanitise-data-checkbox.component.html
@@ -1,4 +1,4 @@
-<div class="govuk-grid-row govuk-!-margin-top-6 govuk-!-margin-left-0">
+<div class="govuk-grid-row govuk-!-margin-left-0">
   <div class="govuk-checkboxes govuk-checkboxes--small">
     <div class="govuk-checkboxes__item">
       <input
