Add a paragraph for new page and redirected the new page to dashboard

--- a/src/app/features/wdf/wdf-claims/wdf-grant-letter/grant-leter-sent/grant-letter-sent.component.html
+++ b/src/app/features/wdf/wdf-claims/wdf-grant-letter/grant-leter-sent/grant-letter-sent.component.html
@@ -8,8 +8,7 @@
           <h1 class="govuk-fieldset__heading">Grant letter has been sent</h1>
         </legend>
         <p data-testid="info" class="govuk-!-margin-bottom-8">
-          Before you can manage Workforce Development Fund (WDF) claims, <br />you need to email a copy of the grant
-          letter to be signed.
+          The grant letter was sent by email to example@example.com with instructions telling Some one what to do next.
         </p>
       </fieldset>
 
