Add test for grant letter page

--- a/src/app/features/wdf/wdf-claims/wdf-grant-letter/wdf-grant-letter.component.html
+++ b/src/app/features/wdf/wdf-claims/wdf-grant-letter/wdf-grant-letter.component.html
@@ -12,7 +12,7 @@
           letter to be signed.
         </p>
         <app-details [title]="revealTitle">
-          <p>Coming soon...........</p>
+          <p data-testid="reveal">Coming soon...........</p>
         </app-details>
         <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--s govuk-!-margin-bottom-6">
