--- a/src/app/features/workplace/create-user-account/create-user-account.component.html
+++ b/src/app/features/workplace/create-user-account/create-user-account.component.html
@@ -44,11 +44,24 @@
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
             <h2 class="govuk-fieldset__heading">Permissions</h2>
           </legend>
+          <ng-container *ngIf="wdfUserFlag">
+            <p>
+              If this user needs to manage Workforce Development Fund (WDF) claims, make sure you select the WDF option
+              that matches their needs.
+            </p>
+            <app-details [title]="'What are WDF claims?'">
+              <p>
+                WDF claims are a way for you to recover money your organisation has spent on staff development. Costs
+                can be claimed for a wide range of adult social care qualifications, learning programmes and digital
+                learning modules.
+              </p>
+            </app-details>
+          </ng-container>
 
           <span *ngIf="submitted && form.get('role').errors" id="role-error" class="govuk-error-message">
             <span class="govuk-visually-hidden">Error:</span> {{ getFirstErrorMessage('role') }}
           </span>
-          <div class="govuk-radios">
+          <div class="govuk-radios govuk-!-margin-bottom-2">
             <div class="govuk-radios__item" *ngFor="let item of roleRadios; let i = index">
               <input
                 class="govuk-radios__input"
