--- a/src/app/features/wdf/wdf-claims/wdf-grant-letter/grant-leter-sent/grant-letter-sent.component.html
+++ b/src/app/features/wdf/wdf-claims/wdf-grant-letter/grant-leter-sent/grant-letter-sent.component.html
@@ -1,18 +1,14 @@
-<app-error-summary *ngIf="submitted && form.invalid" [formErrorsMap]="formErrorsMap" [form]="form"></app-error-summary>
-
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form">
-      <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          <h1 class="govuk-fieldset__heading">Grant letter has been sent</h1>
-        </legend>
-        <p data-testid="info" class="govuk-!-margin-bottom-8">
-          The grant letter was sent by email to example@example.com with instructions telling Some one what to do next.
-        </p>
-      </fieldset>
+    <fieldset class="govuk-fieldset">
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+        <h1 class="govuk-fieldset__heading">Grant letter has been sent</h1>
+      </legend>
+      <p data-testid="info" class="govuk-!-margin-bottom-8">
+        The grant letter was sent by email to example@example.com with instructions telling Some one what to do next.
+      </p>
+    </fieldset>
 
-      <button class="govuk-button" type="submit">Continue</button>
-    </form>
+    <a [routerLink]="['/dashboard']" role="button" draggable="false" class="govuk-button">Continue</a>
   </div>
 </div>
