Add error messages to a new function and add new message

--- a/src/app/features/wdf/wdf-claims/wdf-grant-letter/wdf-grant-letter.component.html
+++ b/src/app/features/wdf/wdf-claims/wdf-grant-letter/wdf-grant-letter.component.html
@@ -33,7 +33,7 @@
                   name="grantLetter"
                   type="radio"
                   [value]="answer"
-                  (change)="addControl(answer)"
+                  (change)="onChange(answer)"
                 />
                 <label class="govuk-label govuk-radios__label" for="grantLetter-{{ idx }}">
                   {{ answer }}
