--- a/src/app/features/workplace/create-user-account/create-user-account.component.html
+++ b/src/app/features/workplace/create-user-account/create-user-account.component.html
@@ -72,7 +72,7 @@
                 type="radio"
               />
               <label class="govuk-label govuk-radios__label" for="role-{{ i }}">
-                {{ item.label }}
+                {{ item.value }}
               </label>
             </div>
           </div>
