--- a/src/app/features/workplace/create-user-account/create-user-account.component.html
+++ b/src/app/features/workplace/create-user-account/create-user-account.component.html
@@ -39,25 +39,24 @@
         </ng-container>
       </fieldset>
 
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--m govuk-!-margin-top-4">
+        <h2 class="govuk-fieldset__heading">Permissions</h2>
+      </legend>
+      <ng-container *ngIf="wdfUserFlag">
+        <p>
+          If this user needs to manage Workforce Development Fund (WDF) claims, make sure you select the WDF option that
+          matches their needs.
+        </p>
+        <app-details [title]="'What are WDF claims?'">
+          <p>
+            WDF claims are a way for you to recover money your organisation has spent on staff development. Costs can be
+            claimed for a wide range of adult social care qualifications, learning programmes and digital learning
+            modules.
+          </p>
+        </app-details>
+      </ng-container>
       <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get('role').errors">
         <fieldset class="govuk-fieldset">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-            <h2 class="govuk-fieldset__heading">Permissions</h2>
-          </legend>
-          <ng-container *ngIf="wdfUserFlag">
-            <p>
-              If this user needs to manage Workforce Development Fund (WDF) claims, make sure you select the WDF option
-              that matches their needs.
-            </p>
-            <app-details [title]="'What are WDF claims?'">
-              <p>
-                WDF claims are a way for you to recover money your organisation has spent on staff development. Costs
-                can be claimed for a wide range of adult social care qualifications, learning programmes and digital
-                learning modules.
-              </p>
-            </app-details>
-          </ng-container>
-
           <span *ngIf="submitted && form.get('role').errors" id="role-error" class="govuk-error-message">
             <span class="govuk-visually-hidden">Error:</span> {{ getFirstErrorMessage('role') }}
           </span>
