change the number of missing training to staff for mandatory training

--- a/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
+++ b/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
@@ -30,6 +30,7 @@
     [totalExpiredTraining]="totalExpiredTraining"
     [totalExpiringTraining]="totalExpiringTraining"
     [totalMissingMandatoryTraining]="missingMandatoryTraining"
+    [totalStaffMissingMandatoryTraining]="staffMissingMandatoryTraining"
   ></app-training-info-panel>
 
   <app-training-and-qualifications-categories
