fix missing mandatory to be is when one staff is missing

--- a/src/app/shared/components/training-info-panel/training-info-panel.component.html
+++ b/src/app/shared/components/training-info-panel/training-info-panel.component.html
@@ -22,7 +22,7 @@
           >
           <ng-container [ngPlural]="totalStaffMissingMandatoryTraining">
             <ng-template ngPluralCase="=1">
-              <span>staff are missing mandatory training</span>
+              <span>staff is missing mandatory training</span>
             </ng-template>
             <ng-template ngPluralCase="other">
               <span>staff are missing mandatory training</span>
