feat(wdfAddUserPage): Use getUserPermissionTypes in create-user-account

--- a/src/app/features/workplace/create-user-account/create-user-account.component.html
+++ b/src/app/features/workplace/create-user-account/create-user-account.component.html
@@ -67,11 +67,11 @@
                 [formControlName]="'role'"
                 id="role-{{ i }}"
                 name="role"
-                value="{{ item.value }}"
+                value="{{ item.setPermissionsValue }}"
                 type="radio"
               />
               <label class="govuk-label govuk-radios__label" for="role-{{ i }}">
-                {{ item.value }}
+                {{ item.setPermissionsValue }}
               </label>
             </div>
           </div>
