--- a/src/app/features/workplace/create-user-account/create-user-account.component.html
+++ b/src/app/features/workplace/create-user-account/create-user-account.component.html
@@ -55,22 +55,26 @@
           </p>
         </app-details>
       </ng-container>
-      <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get('role').errors">
+      <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get('permissionsType').errors">
         <fieldset class="govuk-fieldset">
-          <span *ngIf="submitted && form.get('role').errors" id="role-error" class="govuk-error-message">
-            <span class="govuk-visually-hidden">Error:</span> {{ getFirstErrorMessage('role') }}
+          <span
+            *ngIf="submitted && form.get('permissionsType').errors"
+            id="permissionsType-error"
+            class="govuk-error-message"
+          >
+            <span class="govuk-visually-hidden">Error:</span> {{ getFirstErrorMessage('permissionsType') }}
           </span>
           <div class="govuk-radios govuk-!-margin-bottom-2">
-            <div class="govuk-radios__item" *ngFor="let item of roleRadios; let i = index">
+            <div class="govuk-radios__item" *ngFor="let item of permissionsTypeRadios; let i = index">
               <input
                 class="govuk-radios__input"
-                [formControlName]="'role'"
-                id="role-{{ i }}"
-                name="role"
+                [formControlName]="'permissionsType'"
+                id="permissionsType-{{ i }}"
+                name="permissionsType"
                 value="{{ item.setPermissionsValue }}"
                 type="radio"
               />
-              <label class="govuk-label govuk-radios__label" for="role-{{ i }}">
+              <label class="govuk-label govuk-radios__label" for="permissionsType-{{ i }}">
                 {{ item.setPermissionsValue }}
               </label>
             </div>
